# FastAPI-AsyncSQLAlchemy-CRUD

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 18d613c515fb_update_register_table.py  20baa1078baa_create_tag_table.py  20e26d59febe_create_register_table.py  4f4ac3ba753a_update_register_table.py  5154f95f3450_update_timestamps.py  545ef5262ada_update_timestamps.py  553371b8f7e6_update_timestamps.py  9e2318261803_update_timestamps.py  aab4ad26756e_create_linktag_table.py  f9075b0d7433_create_link_table.py
app/: main.py  routes.py
app/API/User/: register_repository.py  routers.py  schemas.py
app/API/User/schema/: SignIn.py
app/Core/: create_db_table.py  db.py  settings.py
app/Models/: LinkTags.py  Links.py  Register.py  Tags.py  Timestamps.py  User.py
